feat(react-app): Update question components

--- a/Web_App/web_app.client/src/styles/InstructionButtons.css
+++ b/Web_App/web_app.client/src/styles/InstructionButtons.css
@@ -1,14 +1,31 @@
 .instruction-button {
     padding: 1em 2em; /* Making the buttons larger */
-    margin-top: 2em;
+    margin-top: 0.25em;
+    margin-right: 0.25em;
+    margin-left: 0.25em;
     background-color: #0367ab; /* Fitting color */
     color: #fff7f7; /* Text color */
     border: none;
     border-radius: 8px;
     cursor: pointer;
+    display: block;
     transition: background-color 0.3s ease; /* Hover effect */
 }
 
 .instruction-button:hover {
     background-color: #5f9bc4; /* Hover color */
+}
+
+.instruction-button-disabled {
+    padding: 1em 2em; /* Making the buttons larger */
+    margin-top: 0.25em;
+    margin-right: 0.25em;
+    margin-left: 0.25em;
+    background-color: rgb(156, 12, 12); /* Fitting color */
+    color: #fff7f7; /* Text color */
+    border: none;
+    border-radius: 8px;
+    cursor: pointer;
+    display: block;
+    transition: background-color 0.3s ease; /* Hover effect */
 }
